# Naters-Utils

./: .dockerignore  .gitignore  Dockerfile.build  Jenkinsfile  pyproject.toml
.github/workflows/: release.yml
src/naters_utils/: __init__.py  functions.py  iterables.py  objects.py
tests/: test_func_cache.py
