[project]
name = "naters-utils"
authors = [{name = "Nater0214", email = "gamer@nater0214.com"}]
version = "0.3.2"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
readme = "README.md"

optional-dependencies.dev = [
  "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
python_functions="*_test"
pythonpath = [
  "src"
]

[tool.hatch]
version.path = "src/naters_utils/__init__.py"

[tool.hatch.build.targets]
wheel.packages = ["src/naters_utils"]